Fixed alignment bug and added contact section

--- a/src/components/HeroSection.scss
+++ b/src/components/HeroSection.scss
@@ -10,13 +10,13 @@
   height: calc(100vh - var(--navbar-height));
 
   &__title {
-    font-size: 4.5rem;
+    font-size: 4rem;
     color: var(--clr-hero-text);
     margin-bottom: 2.5rem;
   }
 
   &__subtitle {
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: var(--clr-hero-text);
   }
 
