--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -7,7 +7,7 @@
   padding: 0 2rem;
 
   &__title {
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: bold;
     color: var(--clr-navbar-text);
     text-transform: uppercase;
@@ -22,7 +22,7 @@
 
   &__link {
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     color: var(--clr-navbar-text);
     text-transform: uppercase;
     letter-spacing: 0.1rem;
